--- a/ansible-examples/local_config_deployall/roles/common/tasks/main.yml
+++ b/ansible-examples/local_config_deployall/roles/common/tasks/main.yml
@@ -33,14 +33,6 @@
         owner: splunk
         group: splunk
         #mode: '0644'
-        
-    - name: Copy Splunk tarball to remote host and unpack
-      unarchive:
-        src: /tmp/Splunk.license
-        dest: /opt/splunk/etc/licenses
-        owner: splunk
-        group: splunk
-        #mode: '0644'
 
     #- name: Set permissions on the tree
 
@@ -49,6 +41,15 @@
         cmd: "/opt/splunk/bin/splunk start --accept-license --no-prompt"
       become: true
       become_user: splunk
+      
+      
+    - name: Copy Splunk licenses
+      unarchive:
+        src: /tmp/Splunk.license
+        dest: /opt/splunk/etc/licenses
+        owner: splunk
+        group: splunk
+        #mode: '0644'
 
     - name: Stop Splunk to add user data
       command:
