--- a/ansible-examples/local_config_uf_linux/roles/common/tasks/main.yml
+++ b/ansible-examples/local_config_uf_linux/roles/common/tasks/main.yml
@@ -13,7 +13,7 @@
 
   - name: Copy Splunk tarball to remote host and unpack
     unarchive:
-      src: /tmp/splunk-8.1.2-545206cc9f70-Linux-x86_64.tgz
+      src: /tmp/splunkforwarder-8.1.2-545206cc9f70-Linux-x86_64.tgz
       dest: /opt
       owner: splunk
       group: splunk
@@ -37,8 +37,8 @@
 
   - name: Start Splunk
     command:
-      cmd: "/opt/splunk/bin/splunk start --accept-license"
-      become: true
-      become_user: splunk
+      cmd: "/opt/splunkforwarder/bin/splunk start --accept-license"
+    become: true
+    become_user: splunk
     
  
